--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:background="?attr/android:colorBackground"
     android:layout_height="match_parent"
-    tools:context="net.nrask.atmos.ui.activities.MainActivity">
+    tools:context="net.nrask.redditvoid.ui.activities.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
