--- a/app/src/main/res/layout/cell_submission.xml
+++ b/app/src/main/res/layout/cell_submission.xml
@@ -19,21 +19,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <TextView
+            android:id="@+id/txt_title"
+            style="@style/SubmissionTitle" />
+
         <ImageView
             android:id="@+id/img_thumbnail"
             android:scaleType="centerCrop"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-        <TextView
-            style="@style/Headline"
-            android:id="@+id/txt_title"
-            android:layout_marginStart="@dimen/default_margin"
-            android:layout_marginEnd="@dimen/default_margin"
-            android:layout_marginTop="@dimen/default_margin_half"
-            android:layout_marginBottom="@dimen/default_margin_half"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -50,16 +45,23 @@
                 <ImageView
                     android:id="@+id/img_submission_header_key"
                     android:src="@drawable/circle_primary_color"
-                    android:tint="@color/grey_500"
+                    android:tint="?attr/colorAccent"
                     android:layout_margin="0.5dp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"/>
 
+                <!--Separate view as placeholder as centering vector images isn't easy -->
+                <ImageView
+                    app:srcCompat="@drawable/ic_reddit_snoo_24dp"
+                    android:id="@+id/img_placeholder"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
                 <net.nrask.srjneeds.views.RoundedImageView
                     android:id="@+id/img_submission_subreddit_header"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:srcCompat="@drawable/ic_reddit_snoo_24dp"/>
+                    android:layout_height="match_parent" />
             </FrameLayout>
 
 
