--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">@color/immersive_bars</color>
+    <color name="primary">@color/black</color>
     <color name="primaryDark">@color/black</color>
     <color name="accent">@color/orange_500</color>
 
