--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,7 +2,11 @@
 <resources>
     <dimen name="default_margin">16dp</dimen>
     <dimen name="default_margin_half">8dp</dimen>
+    <dimen name="default_toolbar_height">56dp</dimen>
     <dimen name="animator_lift_of_touch_amount">5dp</dimen>
+
+    <dimen name="submission_title_size">20sp</dimen>
+
     <dimen name="submission_author_container_height">48dp</dimen>
     <dimen name="submission_cell_spacing">16dp</dimen>
     <dimen name="submission_cell_default_elevation">1dp</dimen>
