--- a/app/src/main/res/layout/activity_content_preview.xml
+++ b/app/src/main/res/layout/activity_content_preview.xml
@@ -60,24 +60,21 @@
                     android:layout_height="@dimen/default_toolbar_height"/>
                 
                 <TextView
-                    android:background="@color/white"
-                    android:transitionName="@string/transition_title"
                     style="@style/SubmissionTitle"
-                    android:id="@+id/txt_title"/>
+                    android:id="@+id/txt_title"
+                    android:background="@color/white"
+                    android:transitionName="@string/transition_title"/>
 
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
-        <TextView
-            android:id="@+id/viewDesc"
-            android:tag="desc"
-            android:textSize="35sp"
-            android:gravity="center"
-            android:text="Loreum Loreum"
-            android:textColor="@android:color/white"
+        <RelativeLayout
+            android:id="@+id/comments_container"
+            android:background="#FF00FF"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#FF00FF"/>
+            android:layout_height="match_parent">
+
+        </RelativeLayout>
     </net.nrask.redditvoid.ui.views.DragLayout>
 
 </FrameLayout>
