--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -60,7 +60,7 @@
         <item name="android:paddingTop">@dimen/default_margin_half</item>
         <item name="android:paddingBottom">@dimen/default_margin_half</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:transitionName" tools:targetApi="lollipop">@string/transition_title</item>
     </style>
 </resources>
