--- a/app/src/main/res/layout/activity_content_preview.xml
+++ b/app/src/main/res/layout/activity_content_preview.xml
@@ -9,7 +9,7 @@
     android:id="@+id/draggable_frame"
     app:dragDismissDistance="110dp"
     app:dragDismissScale="0.95"
-    tools:context="net.nrask.redditvoid.ui.activities.ContentPreviewActivity">
+    tools:context="net.nrask.redditvoid.ui.activities.SubmissionDetailsActivity">
 
     <View
         android:id="@+id/background"
@@ -70,7 +70,7 @@
 
         <RelativeLayout
             android:id="@+id/comments_container"
-            android:background="#FF00FF"
+            android:background="#FF0000"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
