--- a/app/src/main/res/layout/activity_content_preview.xml
+++ b/app/src/main/res/layout/activity_content_preview.xml
@@ -16,7 +16,7 @@
         android:transitionName="@string/transition_background_preview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:alpha="0.7"
+        android:alpha="1.0"
         android:background="@color/black"
         tools:targetApi="lollipop"/>
 
@@ -53,7 +53,7 @@
 
                 <android.support.v7.widget.Toolbar
                     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                    android:theme="@style/ThemeOverlay.AppCompat.Light"
                     android:id="@+id/submission_toolbar"
                     android:background="?attr/colorPrimary"
                     android:layout_width="match_parent"
